--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1337,7 +1337,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .sidebar-info { gap: 25px; }
 
-  .avatar-box { border-radius: 30px; }
+  .avatar-box { border-radius: 100px; }
 
   .avatar-box img { width: 120px; }
 
@@ -1840,6 +1840,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   .info-content .name {
     white-space: nowrap;
     text-align: center;
+font-size: 1.5rem;
   }
 
   .info-content .title { margin: auto; }
